fixed line height and gap between ptype and subtype

--- a/src/styles/search/_search.scss
+++ b/src/styles/search/_search.scss
@@ -143,6 +143,17 @@
       margin-top: 5px;
       font-weight: 200;
     }
+    .autocomplete-subtype {
+      font-size: 8pt;
+      margin-top: -4px;
+      display: inline;
+      padding: 2px 4px 2px 4px;
+      background-color: #454f6314;
+      border-radius: 4px;
+    }
+    .margin-right-4 {
+      margin-right: 4px;
+    }
   }
 }
 
